--- a/DataMining/homework-1-st.ipynb
+++ b/DataMining/homework-1-st.ipynb
@@ -216,11 +216,11 @@
    },
    "outputs": [],
    "source": [
-    "CONSUMER_KEY = \"6TDa83uTvIvQRmg5HFM19qA5M\"\n",
-    "CONSUMER_SECRET = \"7b76cB7VT8Q1UyfsVFylhkcufv2fxCgdUycapQahA7PkJXwKBE\"\n",
+    "CONSUMER_KEY = \"\"\n",
+    "CONSUMER_SECRET = \"\"\n",
     "\n",
-    "ACCESS_TOKEN_KEY = \"271389987-v6bb64siNAM873AKN9bDwNME95fZcXaep413e1G5\"\n",
-    "ACCESS_TOKEN_SECRET = \"Po3T8bteUDzGtlpHOk5mTSLQco3G8PJGEF1JyuyF7imGd\"\n",
+    "ACCESS_TOKEN_KEY = \"\"\n",
+    "ACCESS_TOKEN_SECRET = \"\"\n",
     "\n",
     "api = twitter.Api(consumer_key=CONSUMER_KEY, \n",
     "                  consumer_secret=CONSUMER_SECRET, \n",
@@ -301,7 +301,7 @@
    },
    "outputs": [],
    "source": [
-    "GEO_USER_NAME = \"vitaliyrakitin\"\n",
+    "GEO_USER_NAME = \"\"\n",
     "Already_Tested_Coordinates = {} #словарь, содержащий все уже найденные координаты\n",
     "\n",
     "def get_coordinates_by_location(location):    \n",
