--- a/DataMining/homework-1-st.ipynb
+++ b/DataMining/homework-1-st.ipynb
@@ -785,9 +785,9 @@
     "[подсказка](http://stroykova.github.io/sphera/l1_3.png) \n",
     "    3. На основе полученных данных ответьте на вопросы \n",
     "        1. Почему mean и median имеют разные значения?\n",
-    "$ \\it Ответ:$ Медиана (median) — это такое число выборки, что ровно половина из элементов выборки больше него, а другая половина меньше него. Среднее (mean) - это такое число, которое является средним арифметическим всей нашей выборки. Несложно заметить по максимальным значениям, что у нас присутствуют выбросы, отличающиеся на несколько порядков от средних значений по всей выборке. Данные значения очень сильно влияют на mean, однако median, в свою очередь, устойчива к выбросам. \n",
+    "Ответ: Медиана (median) — это такое число выборки, что ровно половина из элементов выборки больше него, а другая половина меньше него. Среднее (mean) - это такое число, которое является средним арифметическим всей нашей выборки. Несложно заметить по максимальным значениям, что у нас присутствуют выбросы, отличающиеся на несколько порядков от средних значений по всей выборке. Данные значения очень сильно влияют на mean, однако median, в свою очередь, устойчива к выбросам. \n",
     "        2. Пользователи какого класса популярнее? Аргументируйте ответ.\n",
-    "$ \\it Ответ:$ Можно заметить, что медаины и средние обоих классов не сильно отличаются друг от друга, на всего лишь одной выборке сложно сделать выводы о всей базе. По этому для ответа на вопрос можно попробовать собрать статистические оценки среднего и медианы. (см. далее)\n",
+    "Ответ: Можно заметить, что медаины и средние обоих классов не сильно отличаются друг от друга, на всего лишь одной выборке сложно сделать выводы о всей базе. По этому для ответа на вопрос можно попробовать собрать статистические оценки среднего и медианы. (см. далее)\n",
     "\n",
     "Подсказка: так как пользователей позитивного класса в 3.5 раза больше, чем негативного прежде чем приступать к анализу необходимо случайным образом выбрать по N(N>=500) пользователей негативного и позитивного классов. (1 балл)"
    ]
@@ -895,7 +895,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$ \\it Продолжение$ $ \\it ответа:$ Исходя из статичтической выборки можно сделать вывод, что пользователи ${\\bf негативного}$ ${\\bf класса}$ более популярны, так как значения медианы и среднего у них получаются больше, хоть и не на много."
+    "Продолжение ответа: Исходя из статичтической выборки можно сделать вывод, что пользователи НЕГАТИВНОГО КЛАССА более популярны, так как значения медианы и среднего у них получаются больше, хоть и не на много."
    ]
   },
   {
