--- a/DataMining/homework-3-st.ipynb
+++ b/DataMining/homework-3-st.ipynb
@@ -191,7 +191,8 @@
     "        Use data matrix x to compute model parameters\n",
     "        \"\"\"\n",
     "        self.N_objects  = len(x) # всего объектов\n",
-    "        self.N_clusters = self.N_objects # всего кластеров в начальный момент столько же, сколько объектов\n",
+    "        self.N_clusters = self.N_objects \n",
+    "        # всего кластеров в начальный момент столько же, сколько объектов\n",
     "        \n",
     "        # уникальное название файла  \n",
     "        self.tmp_file = \"tmp_%s_%i_%0.2lf\"%(self.linkname,len(x),x[0][0])\n",
@@ -219,7 +220,8 @@
     "                    else:\n",
     "                        break\n",
     "                        \n",
-    "        # зададим матрицу расстояний и посчитаем её в начальный момент (треугольная, на остлальных будут inf)\n",
+    "        # зададим матрицу расстояний и посчитаем её в начальный момент \n",
+    "        # (треугольная, на остлальных будут inf)\n",
     "        # если количество кластеров уже k, то она не нужна!\n",
     "        if self.N_clusters > self.k:\n",
     "            self.distanse = np.full((self.N_clusters,self.N_clusters),inf)\n",
@@ -468,48 +470,6 @@
     "\n",
     "print Sihouette(x_iris,pred_iris) \n",
     "quality = Sihouette"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 109,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.01834272\n"
-     ]
-    }
-   ],
-   "source": [
-    "def Inertion(x, y):\n",
-    "    clusters = {} # все кластеры, которые уже мелькали\n",
-    "    for elem in y:\n",
-    "        if elem not in clusters: #если такого кластера ещё не было, то добавим в clusters\n",
-    "            clusters[elem] = 1\n",
-    "        else:\n",
-    "            clusters[elem] += 1 \n",
-    "    centroids = {}\n",
-    "\n",
-    "\n",
-    "    for i,clust in enumerate(y):\n",
-    "        if clusters[clust] > 10:\n",
-    "            if clust in centroids:\n",
-    "                centroids[clust] += x[i]/clusters[clust]\n",
-    "            else: centroids[clust] = x[i]/clusters[clust]\n",
-    "    \n",
-    "    iner = 0.0\n",
-    "    for i,clust in enumerate(y):\n",
-    "        if clusters[clust] > 10:\n",
-    "            iner += ((x[i] - centroids[clust])/clusters[clust])**2\n",
-    "        \n",
-    "    return sum(iner) \n",
-    "print Inertion(x_iris,pred_iris) \n",
-    "quality = Inertion"
    ]
   },
   {
