--- a/DataMining/colloquium.ipynb
+++ b/DataMining/colloquium.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "Пусть алгоритм, кластеризующий точки в многомерном Евклидовом пространстве оптимизирует критерий (k задано):\n",
     "\n",
-    "$$ J = \\frac{1}{2} \\sum\\limits_k \\sum\\limits_{x_i \\in C_k} \\sum\\limits_{x_j \\in C_k} || x_i - x_j ||^2 $$\n",
+    "<img src=\"summ.png\">\n",
     "\n",
     "Покажите, что такой алгоритм эквивалентен стандартному алгоритму k-means."
    ]
